# planetary-computer-isd

./: .gitignore  .pre-commit-config.yaml  README.md  gateway.yml  pyproject.toml  requirements-dev.txt  setup.cfg
src/pc_isd/: __init__.py  cli.py  client.py  config.py  converter.py
