[metadata]
name = pc-isd
author = Pete Gadomski
author_email = pete.gadomski@gmail.com
description = Work with NOAA Integrated Surface Database (ISD) files in the Planetary Computer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gadomski/planetary-computer-isd
project_urls =
    Bug Tracker = https://github.com/gadomski/planetary-computer-isd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    adlfs ~= 2021.10.0
    azure-storage-blob ~= 12.9
    blosc == 1.10.2
    bokeh ~= 2.4
    click ~= 8.0
    click-log ~= 0.3.2
    dask-gateway ~= 0.9.0
    dask[distributed,dataframe] == 2021.11.2
    fastparquet ~= 0.7.2
    lz4 == 3.1.10
    isd ~= 0.2.0
    pyarrow ~= 6.0
    pyserde[toml] ~= 0.6.0


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pc-isd = pc_isd.cli:main
